Finishes the Web API methods and more Updates the Api Spec
