# docs/task-management-api-spec.yaml
@@ -96,11 +96,13 @@ paths:
 
   /users/{userID}/boards:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - User Management
       summary: get all user available boards
       description: |
-        Get a list of all the boards availabe to the provided user
+        Get a list of all the boards available to the provided user
       parameters:
         - name: userID
           in: path
@@ -122,11 +124,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that user's boards
           content:
@@ -144,6 +142,8 @@ paths:
 
   /boards:
     post:
+      security:
+        - bearerAuth: []
       tags:
         - Board Management
       summary: create a new board
@@ -170,11 +170,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '409':
           description: Provided name already exists
           content:
@@ -186,6 +182,8 @@ paths:
 
   /boards/{boardID}:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - Board Management
       summary: Gets the details of a given board
@@ -194,7 +192,7 @@ paths:
       parameters:
         - name: boardID
           in: path
-          description: The boards's id
+          description: The board's id
           required: true
           schema:
             type: integer
@@ -206,17 +204,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/Board'
         '400':
-          description: Invalid ID provideed
+          description: Invalid ID provided
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -235,11 +229,13 @@ paths:
 
   /boards/{boardID}/users:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - Board Management
       summary: get all users
       description: |
-        Get a list of all the boards availabe to the provided user
+        Get a list of all the boards available to the provided user
       parameters:
         - name: boardID
           in: path
@@ -261,11 +257,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -275,6 +267,8 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerErrorResponse'
     post:
+      security:
+        - bearerAuth: []
       tags:
         - Board Management
       summary: Adds a user to the given board
@@ -304,11 +298,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -326,6 +316,8 @@ paths:
 
   /boards/{boardID}/lists:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - Board Management
       summary: get all lists
@@ -352,11 +344,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -375,6 +363,8 @@ paths:
 
   /lists:
     post:
+      security:
+        - bearerAuth: []
       tags:
         - List Management
       summary: create a new list
@@ -401,11 +391,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -424,6 +410,8 @@ paths:
 
   /lists/{listID}:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - List Management
       summary: get the details of a list
@@ -450,11 +438,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -472,6 +456,8 @@ paths:
 
   /lists/{listID}/cards:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - List Management
       summary: get all cards
@@ -498,11 +484,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -521,6 +503,8 @@ paths:
 
   /cards:
     post:
+      security:
+        - bearerAuth: []
       tags:
         - Card Management
       summary: create a new card
@@ -547,11 +531,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -569,6 +549,8 @@ paths:
 
   /cards/{cardID}:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - Card Management
       summary: get the details of a card
@@ -595,11 +577,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that board
           content:
@@ -617,6 +595,8 @@ paths:
 
   /cards/{cardID}/move:
     post:
+      security:
+        - bearerAuth: []
       tags:
         - Card Management
       summary: move a card
@@ -646,11 +626,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AppError'
         '401':
-          description: User not logged in
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
+          $ref: '#/components/responses/UserNotAuthenticatedResponse'
         '403':
           description: User doesn't have access to that card
           content:
@@ -661,9 +637,21 @@ paths:
           $ref: '#/components/responses/InternalServerErrorResponse'
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: UUID
+
   responses:
     InternalServerErrorResponse:
       description: Internal Server Error
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AppError'
+    UserNotAuthenticatedResponse:
+      description: User not authenticated
       content:
         application/json:
           schema:
@@ -947,12 +935,12 @@ components:
         internalErrorCode:
           type: integer
           description: The internal error's Code
-          example: 1000
+          example: 9000
         internalErrorName:
           type: string
           description: The internal error's name
-          example: "Bad Request"
+          example: "InvalidUserIDException"
         description:
           type: string
           description: A description of the error
-          example: "Failed to read the request body"
+          example: "Invalid User ID provided in the path"
