# src/main/kotlin/pt/isel/ls/api/routers/cards/CardsRoutes.kt
@@ -1,17 +1,9 @@
 package pt.isel.ls.api.routers.cards
 
-import org.http4k.core.Method.POST
-import org.http4k.core.Request
-import org.http4k.core.Response
-import org.http4k.core.Status
-import org.http4k.routing.bind
+import org.http4k.core.HttpHandler
+import org.http4k.core.Method
+import org.http4k.routing.RoutingHttpHandler
 import org.http4k.routing.routes
-import pt.isel.ls.api.dto.card.CreateCardRequest
-import pt.isel.ls.api.dto.card.CreateCardResponse
-import pt.isel.ls.api.routers.exceptions.runAndHandleExceptions
-import pt.isel.ls.api.routers.utils.getBearerToken
-import pt.isel.ls.api.routers.utils.getJsonBodyTo
-import pt.isel.ls.api.routers.utils.json
 import pt.isel.ls.services.cards.CardServices
 
 /**
@@ -21,14 +13,15 @@ import pt.isel.ls.services.cards.CardServices
  * @property routes the card endpoints
  */
 class CardsRoutes(private val services: CardServices) {
-    val routes = routes(
+    val routes: RoutingHttpHandler = routes(TODO() as Pair<Method, HttpHandler>)
+    /*
         "/" bind POST to ::createCard
-        // "/{cardID}" bind GET to ::getCardDetails,
-        // "/{cardID}/move" bind POST to ::moveCard,
+        "/{cardID}" bind GET to ::getCardDetails,
+        "/{cardID}/move" bind POST to ::moveCard,
     )
 
-    private fun createCard(request: Request): Response {
-        return runAndHandleExceptions {
+    private fun createCard(request: Request): Response =
+        runAndHandleExceptions {
             val cardRequest = request.getJsonBodyTo<CreateCardRequest>()
             val bearerToken = request.getBearerToken()
 
@@ -41,9 +34,29 @@ class CardsRoutes(private val services: CardServices) {
                     cardRequest.dueDate
                 )
             val cardResponse = CreateCardResponse(card.id)
-            Response(Status.CREATED)
+            Response(CREATED)
                 .header("Location", "/cards/${card.id}")
                 .json(cardResponse)
         }
-    }
+
+    private fun getCardDetails(request: Request): Response =
+        runAndHandleExceptions {
+            val cardID = request.getCardID()
+            val bearerToken = request.getBearerToken()
+
+            val card = services.getCardDetails(bearerToken, cardID)
+            val cardResponse = card.toDTO()
+            Response(OK).json(cardResponse)
+        }
+
+    private fun moveCard(request: Request): Response =
+        runAndHandleExceptions {
+            val cardID = request.getCardID()
+            val bearerToken = request.getBearerToken()
+            val moveCardRequest = request.getJsonBodyTo<MoveCardRequest>()
+
+            services.moveCard(bearerToken, cardID, moveCardRequest)
+            Response(NO_CONTENT)
+        }
+    */
 }
