# src/main/kotlin/pt/isel/ls/api/routers/lists/ListsRoutes.kt
@@ -1,17 +1,9 @@
 package pt.isel.ls.api.routers.lists
 
-import org.http4k.core.Method.POST
-import org.http4k.core.Request
-import org.http4k.core.Response
-import org.http4k.core.Status
-import org.http4k.routing.bind
+import org.http4k.core.HttpHandler
+import org.http4k.core.Method
+import org.http4k.routing.RoutingHttpHandler
 import org.http4k.routing.routes
-import pt.isel.ls.api.dto.list.CreateListRequest
-import pt.isel.ls.api.dto.list.CreateListResponse
-import pt.isel.ls.api.routers.exceptions.runAndHandleExceptions
-import pt.isel.ls.api.routers.utils.getBearerToken
-import pt.isel.ls.api.routers.utils.getJsonBodyTo
-import pt.isel.ls.api.routers.utils.json
 import pt.isel.ls.services.lists.ListServices
 
 /**
@@ -21,22 +13,32 @@ import pt.isel.ls.services.lists.ListServices
  * @property routes the list endpoints
  */
 class ListsRoutes(private val services: ListServices) {
-    val routes = routes(
+    val routes: RoutingHttpHandler = routes(TODO() as Pair<Method, HttpHandler>)
+    /*
         "/" bind POST to ::createList
-        // "/{listID}" bind GET to ::getListDetails,
-        // "/{listID}/cards" bind GET to ::getCardsFromList
+        "/{listID}" bind GET to ::getListDetails,
+        "/{listID}/cards" bind GET to ::getCardsFromList
     )
 
-    private fun createList(request: Request): Response {
-        return runAndHandleExceptions {
+    private fun createList(request: Request): Response =
+        runAndHandleExceptions {
             val listRequest = request.getJsonBodyTo<CreateListRequest>()
             val bearerToken = request.getBearerToken()
 
             val list = services.createList(/*bearerToken,*/listRequest.boardID, listRequest.name)
             val listResponse = CreateListResponse(list.id)
-            Response(Status.CREATED)
+            Response(CREATED)
                 .header("Location", "/lists/${list.id}")
                 .json(listResponse)
         }
-    }
+    private fun getCardsFromList(request: Request): Response =
+        runAndHandleExceptions {
+            val listID = request.getListID()
+            val bearerToken = request.getBearerToken()
+
+            val cards: List<Card> = services.getCardsFromList(bearerToken, listID)
+            val cardsResponse = GetCardFromListResponse(cards.map { it.toDTO() })
+            Response(OK).json(cardsResponse)
+        }
+     */
 }
